--- a/appsources/SafeCrash/www/css/index.css
+++ b/appsources/SafeCrash/www/css/index.css
@@ -1,143 +1,142 @@
 /*TOP*/
-body{
-    font-family: 'Noto Sans', sans-serif;
-    background-color: #303841;
-    color: #eeeeee;
+body {
+  font-family: "Noto Sans", sans-serif;
+  background-color: #303841;
+  color: #eeeeee;
+  -webkit-overflow-scrolling: auto;
 }
-.title-Crash-General{
-    text-align: center;
-    color: red;
+.title-Crash-General {
+  text-align: center;
+  color: red;
 }
-.title-Safe{
-    color: green;
+.title-Safe {
+  color: green;
 }
-.subtitle{
-    text-align: center;
+.subtitle {
+  text-align: center;
 }
 /* info btn*/
 .infobtn {
-    
-    text-align: center;
-    text-transform: uppercase;
-    cursor: pointer;
-    font-size: 1em;
-    position: absolute;
-    background-color: green;
-    border: none;
-    color: #fff;
-    padding: 1px;
-    width:  50px;
-    height: 45px;
-    transition-duration: 0.4s;
-    overflow: hidden;
-    box-shadow: 0 5px 15px #193047;
-    border-radius: 25%;
-  }
-  
-  .infobtn:hover {
-    background: rgb(255, 255, 255);
-    box-shadow: 0px 2px 10px 5px green;
-    color: #000;
-  }
-  
-  .infobtn:after {
-    content: "";
-    background: green;
-    display: block;
-    position: absolute;
-    padding-top: 300%;
-    padding-left: 350%;
-    margin-left: -20px !important;
-    margin-top: -120%;
-    opacity: 0;
-    transition: all 0.8s
-  }
-  
-  .infobtn:active:after {
-    padding: 0;
-    margin: 0;
-    opacity: 1;
-    transition: 0s
-  }
-  
-  .infobtn:focus { outline:0; }
+  text-align: center;
+  text-transform: uppercase;
+  cursor: pointer;
+  font-size: 1em;
+  position: absolute;
+  background-color: green;
+  border: none;
+  color: #fff;
+  padding: 1px;
+  width: 50px;
+  height: 45px;
+  transition-duration: 0.4s;
+  overflow: hidden;
+  box-shadow: 0 5px 15px #193047;
+  border-radius: 25%;
+}
 
+.infobtn:hover {
+  background: rgb(255, 255, 255);
+  box-shadow: 0px 2px 10px 5px green;
+  color: #000;
+}
+
+.infobtn:after {
+  content: "";
+  background: green;
+  display: block;
+  position: absolute;
+  padding-top: 300%;
+  padding-left: 350%;
+  margin-left: -20px !important;
+  margin-top: -120%;
+  opacity: 0;
+  transition: all 0.8s;
+}
+
+.infobtn:active:after {
+  padding: 0;
+  margin: 0;
+  opacity: 1;
+  transition: 0s;
+}
+
+.infobtn:focus {
+  outline: 0;
+}
 
 /* Add Contact Button*/
 .addbtn {
-    margin-left: 6%;
-    text-align: center;
-    text-transform: uppercase;
-    cursor: pointer;
-    font-size: 15px;
-    letter-spacing: 4px;
-    position: relative;
-    background-color: #0c19da;
-    border: none;
-    color: #fff;
-    padding: 10px;
-    width: 300px;
-    text-align: center;
-    transition-duration: 0.4s;
-    overflow: hidden;
-    box-shadow: 0 5px 15px #193047;
-    border-radius: 10px;
-  }
-  
-  .addbtn:hover {
-    background: rgb(255, 255, 255);
-    box-shadow: 0px 2px 10px 5px #0c19da;
-    color: #000;
-  }
-  
-  .addbtn:after {
-    content: "";
-    background: #0c19da;
-    display: block;
-    position: absolute;
-    padding-top: 300%;
-    padding-left: 350%;
-    margin-left: -20px !important;
-    margin-top: -120%;
-    opacity: 0;
-    transition: all 0.8s
-  }
-  
-  .addbtn:active:after {
-    padding: 0;
-    margin: 0;
-    opacity: 1;
-    transition: 0s
-  }
-  
-  .addbtn:focus { outline:0; }
+  margin-left: 6%;
+  text-align: center;
+  text-transform: uppercase;
+  cursor: pointer;
+  font-size: 15px;
+  letter-spacing: 4px;
+  position: relative;
+  background-color: #0c19da;
+  border: none;
+  color: #fff;
+  padding: 10px;
+  width: 300px;
+  text-align: center;
+  transition-duration: 0.4s;
+  overflow: hidden;
+  box-shadow: 0 5px 15px #193047;
+  border-radius: 10px;
+}
+
+.addbtn:hover {
+  background: rgb(255, 255, 255);
+  box-shadow: 0px 2px 10px 5px #0c19da;
+  color: #000;
+}
+
+.addbtn:after {
+  content: "";
+  background: #0c19da;
+  display: block;
+  position: absolute;
+  padding-top: 300%;
+  padding-left: 350%;
+  margin-left: -20px !important;
+  margin-top: -120%;
+  opacity: 0;
+  transition: all 0.8s;
+}
+
+.addbtn:active:after {
+  padding: 0;
+  margin: 0;
+  opacity: 1;
+  transition: 0s;
+}
+
+.addbtn:focus {
+  outline: 0;
+}
 
 /* Contact Container*/
 
-
-
-
-
 /* Delete Button*/
 .button {
-    text-align: center;
-    text-transform: uppercase;
-    cursor: pointer;
-    font-size: 15px;
-    letter-spacing: 4px;
-    position: relative;
-    background-color: #d72323;
-    border: none;
-    color: #fff;
-    padding: 10px;
-    width: 100px;
-    text-align: center;
-    transition-duration: 0.4s;
-    overflow: hidden;
-    box-shadow: 0 5px 15px #193047;
-    border-radius: 10px;
-  }
-  
+  text-align: center;
+  text-transform: uppercase;
+  cursor: pointer;
+  font-size: 10px;
+  letter-spacing: 4px;
+  position: relative;
+  background-color: #d72323;
+  border: none;
+  color: #fff;
+  padding: 10px;
+  width: 90px;
+  text-align: center;
+  transition-duration: 0.4s;
+  overflow: hidden;
+  box-shadow: 0 5px 15px #193047;
+  border-radius: 10px;
+}
+
 .button:hover {
   background: rgb(255, 255, 255);
   box-shadow: 0px 2px 10px 5px #d72323;
@@ -154,37 +153,37 @@ body{
   margin-left: -20px !important;
   margin-top: -120%;
   opacity: 0;
-  transition: all 0.8s
+  transition: all 0.8s;
 }
 
 .button:active:after {
   padding: 0;
   margin: 0;
   opacity: 1;
-  transition: 0s
+  transition: 0s;
 }
 
-.button:focus { outline:0; }
-
+.button:focus {
+  outline: 0;
+}
 
 /*Contact Container*/
-.contactContainer{
-  border:1px solid red;
+.contactContainer {
+  border: 1px solid red;
   border-radius: 15px;
   padding-left: 10px;
   padding-bottom: 5px;
 }
 
-.footer{
+.footer {
   position: fixed;
-  left: 0;
   bottom: 0;
+  left: 0;
   width: 100%;
   text-align: center;
 }
 
-
-.alarmContainer{
+.alarmContainer {
   display: none;
   position: fixed;
   top: 0;
@@ -194,7 +193,7 @@ body{
   height: 23px;
 }
 
-.globalDiv{
+.globalDiv {
   position: fixed;
   top: 0;
   left: 0;
@@ -203,11 +202,10 @@ body{
   height: 23px;
 }
 
-.countdown{
+.countdown {
   display: flex;
   justify-content: center;
 }
-
 
 /* Bound Button*/
 
@@ -247,17 +245,19 @@ body{
   margin-left: -20px !important;
   margin-top: -120%;
   opacity: 0;
-  transition: all 0.8s
+  transition: all 0.8s;
 }
 
 .bound-btn:active:after {
   padding: 0;
   margin: 0;
   opacity: 1;
-  transition: 0s
+  transition: 0s;
 }
 
-.bound-btn:focus { outline:0; }
+.bound-btn:focus {
+  outline: 0;
+}
 
 /* SendNow Button*/
 
@@ -297,20 +297,19 @@ body{
   margin-left: -20px !important;
   margin-top: -120%;
   opacity: 0;
-  transition: all 0.8s
+  transition: all 0.8s;
 }
 
 .callNow:active:after {
   padding: 0;
   margin: 0;
   opacity: 1;
-  transition: 0s
+  transition: 0s;
 }
 
-.callNow:focus { outline:0; }
-
-
-
+.callNow:focus {
+  outline: 0;
+}
 
 /* Dismiss Button*/
 
@@ -350,76 +349,19 @@ body{
   margin-left: -20px !important;
   margin-top: -120%;
   opacity: 0;
-  transition: all 0.8s
+  transition: all 0.8s;
 }
 
 .doNotCall:active:after {
   padding: 0;
   margin: 0;
   opacity: 1;
-  transition: 0s
+  transition: 0s;
 }
 
-.doNotCall:focus { outline:0; }
-
-
-
-
-/* Clear Cache Button*/
-.cacheb {
-  margin-left: 6%;
-  text-align: center;
-  text-transform: uppercase;
-  cursor: pointer;
-  font-size: 15px;
-  letter-spacing: 4px;
-  position: relative;
-  background-color: #7c7e90;
-  border: none;
-  color: #fff;
-  padding: 10px;
-  width: 300px;
-  text-align: center;
-  transition-duration: 0.4s;
-  overflow: hidden;
-  box-shadow: 0 5px 15px #193047;
-  border-radius: 10px;
+.doNotCall:focus {
+  outline: 0;
 }
-
-.cacheb:hover {
-  background: rgb(255, 255, 255);
-  box-shadow: 0px 2px 10px 5px #7c7e90;
-  color: #000;
-}
-
-.cacheb:after {
-  content: "";
-  background: #7c7e90;
-  display: block;
-  position: absolute;
-  padding-top: 300%;
-  padding-left: 350%;
-  margin-left: -20px !important;
-  margin-top: -120%;
-  opacity: 0;
-  transition: all 0.8s
-}
-
-.cacheb:active:after {
-  padding: 0;
-  margin: 0;
-  opacity: 1;
-  transition: 0s
-}
-
-.cacheb:focus { outline:0; }
-
-
-
-
-
-
-
 
 /*check boxs */
 .switch {
@@ -446,8 +388,8 @@ body{
   right: 0;
   bottom: 0;
   background-color: #ccc;
-  -webkit-transition: .4s;
-  transition: .4s;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
 }
 
 .slider:before {
@@ -458,8 +400,8 @@ body{
   left: 4px;
   bottom: 4px;
   background-color: white;
-  -webkit-transition: .4s;
-  transition: .4s;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
 }
 
 input:checked + .slider {
@@ -484,3 +426,59 @@ input:checked + .slider:before {
 .slider.round:before {
   border-radius: 50%;
 }
+
+.boundSwitch {
+  display: flex; /* establish flex container */
+  flex-direction: row; /* default value; can be omitted */
+  flex-wrap: nowrap; /* default value; can be omitted */
+  /* switched from default (flex-start, see below) */
+}
+
+.boundSwitch > div {
+  width: 100px;
+  height: 100px;
+}
+
+
+
+
+
+ /* Drop down button */
+.dropbtn {
+  background-color: #4CAF50;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+  width: 200px;
+}
+
+.dropbtn:hover, .dropbtn:focus {
+  background-color: #3e8e41;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  width: 200px;
+  overflow: auto;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown a:hover {background-color: #f1f1f1}
+
+.show {display:block;}
